Fix footer covering submit button on mobile for contact.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,10 +120,11 @@ h5 {
   color: #f4f4f4;
 }
 
-#fixed-bottom {
-  position: absolute;
+#footer-bottom {
+  position: relative;
   width: 100%;
-  bottom: 0;
+  margin-top: 171px;
+  
 }
 
 
